--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   device_preview: ^1.1.0
   flutter:
     sdk: flutter
+  flutter_icons: ^1.1.0 
 
 dev_dependencies:
   flutter_test:
@@ -21,3 +22,4 @@ flutter:
   #deve ser usado para implementar imagens 
   assets: 
     - lib/imagens/
+ 
